Fix styling to work with script to dynamically set the height of mobile background to not cut off some images on some phones

--- a/src/assets/css/home/home-content-mobile.css
+++ b/src/assets/css/home/home-content-mobile.css
@@ -1,6 +1,8 @@
 @media (max-width: 768px) {
   .graphic-container .background {
-    min-height: 700px;
+    min-height: 900px;
+    max-height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
